bugs cleared, links updated

--- a/index.html
+++ b/index.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo-favicon-bg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Entru - Coming Soon</title>
+    <title>Entru - Modern Event Registration & Pass Platform | Silent Minds</title>
+    <meta
+      name="description"
+      content="Entru is a modern event registration platform by Silent Minds. Create public or private events, manage RSVPs, custom forms, payments, approvals, and digital passes - all in one clean app and web experience."
+    />
+    <meta
+      name="keywords"
+      content="event registration platform, event management software, RSVP tool, event forms with payment, digital event passes, QR code event entry, event platform India, Luma alternative, MakeMyPass alternative"
+    />
+    <meta name="author" content="Silent Minds" />
+    <link rel="canonical" href="https://entru.xyz/" />
+
+    <meta property="og:title" content="Entru - Modern Event Registration Platform" />
+    <meta
+      property="og:description"
+      content="Create and manage events with flexible registrations, forms, payments, and digital passes. A Silent Minds product."
+    />
+    <meta property="og:url" content="https://entru.xyz/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://entru.xyz/logo-sm-b-bg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Entru - Modern Event Registration Platform" />
+    <meta
+      name="twitter:description"
+      content="A flexible event platform for RSVPs, forms, payments, and digital passes."
+    />
+    <meta name="twitter:image" content="https://entru.xyz/logo-sm-b-bg.png" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Entru",
+        "operatingSystem": "Web, iOS, Android",
+        "applicationCategory": "EventManagementApplication",
+        "description": "Entru is a modern event registration platform that supports RSVPs, custom forms, payments, approvals, and digital event passes.",
+        "url": "https://entru.xyz",
+        "creator": {
+          "@type": "Organization",
+          "name": "Silent Minds",
+          "url": "https://silentminds.xyz"
+        }
+      }
+    </script>
   </body>
 </html>
